--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -408,6 +408,7 @@
 		margin: 0 0 10px 0;
 		height: 40px;
 		line-height: 40px;
+		display: block;
 		select {
 			position: absolute;
 			top: 0;
