--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -40,12 +40,8 @@
 			margin: 20px 0 0 0;
 		}
 	}
-}
-
-#postform, #qr_postform {
 	#message-box {
 		overflow: hidden;
-		line-height: 0;
 	}
 }
 
