--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1475,11 +1475,6 @@
 	}
 
 	// other-sections.scss
-	.section-ucp-send-password, .section-ucp-send-activation-email {
-		fieldset dl dd .button1 + .button2 {
-			margin-top: (-$ffs-minus);
-		}
-	}
 	.section-search form[data-focus='keywords'] fieldset dl dd {
 		#st, select[name='ch'] {
 			max-width: none;
