--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
@@ -1,3 +1,11 @@
+/* View Forum Section
+========================================================================== */
+
+.section-viewforum .forum-title + div + .panel .inner > strong:last-child {
+	display: block;
+	margin: 0 0 20px 0;
+}
+
 /* Forums & Topics
 ========================================================================== */
 
