--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -124,7 +124,6 @@
 				display: inline-block;
 				cursor: pointer;
 				margin: 0 0 5px 0;
-				line-height: 0;
 				position: relative;
 				height: auto !important;
 				overflow: visible !important;
